aju ka kaam hai

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@ PAISA HI PAISA
 <!doctype html>
 third time amster hai bhai
 <html lang="en">
+  ajay ka kaam hai
 <head>
   <meta charset="utf-8">
   <title>Admin ajay</title>
